deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal
  labels:
    app: portal
    app.kubernetes.io/name: portal
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: portal
