deploy/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: portal
  labels:
    app: portal
    app.kubernetes.io/name: portal
spec:
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: portal
    weight: 100
  wildcardPolicy: None
